--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,17 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500;600&family=Roboto:wght@100;300;400;500;700;900&display=swap');
-
-
 html * {
   box-sizing: border-box;
 }
 
-
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: 'Roboto', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
