--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@ html * {
 }
 
 body {
-	margin: 0;
+	margin: 0px;
 	font-family: 'Roboto', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
