--- a/css/style.css
+++ b/css/style.css
@@ -128,56 +128,65 @@ img {
 }
 
 .nav {
-    height: var(--header-height);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: var(--font-weight);
-
+	height: var(--header-height);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-weight: var(--font-weight);
 }
 
 @media screen and (max-width: 768px) {
-    .nav__menu {
-        position: fixed;
-        top: var(--header-height);
-        right: 0;
-        width: 80%;
-        height: 100%;
-        padding: 2rem;
-        background-color: var(--secondary-color);
-        transition: .5s;
-    }
+	.nav__menu {
+		position: fixed;
+		top: var(--header-height);
+		right: 0;
+		width: 80%;
+		height: 100%;
+		padding: 2rem;
+		background-color: var(--secondary-color);
+		transition: 0.5s;
+	}
 }
 
 .nav__item {
-    margin-bottom: var(--mb-4);
+	margin-bottom: var(--mb-4);
 }
 
 .nav__link {
-    position: relative;
-    color: #fff;
+	position: relative;
+	color: #fff;
 }
 
 .nav__link:hover {
-    position: relative;
+	position: relative;
 }
 
 .nav__link:hover::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 0.18rem;
-    left: 0;
-    top: 2rem;
-    background-color: var(--primary-color);
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 0.18rem;
+	left: 0;
+	top: 2rem;
+	background-color: var(--primary-color);
 }
 
 .nav__logo {
-    color: var(--primary-color);
+	color: var(--primary-color);
 }
 
 .nav__toggle {
-    color: var(--secondary-color);
-    font-size: 1.5rem;
-    cursor: pointer;
+	color: var(--secondary-color);
+	font-size: 1.5rem;
+	cursor: pointer;
+}
+
+.active::after {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 0.18rem;
+	left: 0;
+	top: 2rem;
+	background-color: var(--primary-color);
 }
