--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ img {
 	.nav__menu {
 		position: fixed;
 		top: var(--header-height);
-		right: 0;
+		right: -100%;
 		width: 80%;
 		height: 100%;
 		padding: 2rem;
@@ -189,4 +189,11 @@ img {
 	left: 0;
 	top: 2rem;
 	background-color: var(--primary-color);
+}
+
+
+/* SHOW MENU */
+
+.show {
+    right: 0;
 }
