--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ img {
     position: absolute;
     right: 0;
     bottom: 0;
-    width: 295px;
+    width: 350px;
 }
 
 .button {
@@ -254,4 +254,22 @@ img {
 
 .button:hover {
     box-shadow: 0 10px 36px rgba(0,0,0,.15);
+}
+
+.about__container {
+    row-gap: 2rem;
+    text-align: center;
+}
+
+.about__subtitle {
+    margin-bottom: var(--mb-2);
+}
+
+.about__img {
+    justify-self: center;
+}
+
+.about__img img {
+    width: 300px;
+
 }
