--- a/css/style.css
+++ b/css/style.css
@@ -77,10 +77,6 @@ img {
 	display: block;
 }
 
-.skills-img {
-	height: 20px;
-}
-
 .section-title {
 	position: relative;
 	font-size: var(--h2-font-size);
@@ -271,5 +267,40 @@ img {
 
 .about__img img {
     width: 300px;
+}
 
+.skills__container {
+    row-gap: 2rem;
+    text-align: center;
+}
+
+.skills__subtitle {
+    margin-bottom: var(--mb-2);
+}
+
+.skills__text {
+    margin-bottom: var(--mb-4); 
+}
+
+.skills__data {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    font-weight: var(--font-weight);
+    padding: .5rem 1rem;
+    margin-bottom: var(--mb-2);
+    border-radius: .5rem;
+    box-shadow: 0 4px 25px rgba(14, 36, 49, .15);
+}
+
+.skills__icon {
+    height: 30px;
+    font-size: 2rem;
+    margin-right: var(--mb-2);
+}
+
+.skills__names {
+    display: flex;
+    align-items: center;
 }
