add and style work section

--- a/css/style.css
+++ b/css/style.css
@@ -304,3 +304,27 @@ img {
     display: flex;
     align-items: center;
 }
+
+.work {
+    text-align: center;
+}
+
+.work__container {
+    row-gap: 2rem;
+
+}
+
+.work__img {
+    box-shadow: 0 4px 25px rgba(14, 36, 49, .15);
+    border-radius: .5rem;
+    overflow: hidden;
+}
+
+.work__img img {
+    transition: 1s;
+    cursor: pointer;
+}
+
+.work__img img:hover {
+    transform: scale(1.1);
+}
