--- a/css/style.css
+++ b/css/style.css
@@ -328,3 +328,23 @@ img {
 .work__img img:hover {
     transform: scale(1.1);
 }
+
+.contact__input {
+    width: 100%;
+    font-size: var(--primary-font-size);
+    font-weight: var(--font-weight);
+    padding: 1rem;
+    border-radius: .5rem;
+    border: 1.5px solid var(--secondary-color);
+    outline: none;
+    margin-bottom: var(--mb-4)
+}
+
+.contact__button {
+    display: block;
+    border: none;
+    outline: none;
+    font-size: var(--primary-font-size);
+    cursor: pointer;
+    margin-left: auto;
+}
