--- a/css/style.css
+++ b/css/style.css
@@ -187,255 +187,270 @@ img {
 	background-color: var(--primary-color);
 }
 
-
 /* SHOW MENU */
 
 .show {
-    right: 0;
+	right: 0;
 }
 
 /* HOME */
 
 .home {
-    height: calc(100vh - 3rem);
-    row-gap: 1rem;
+	height: calc(100vh - 3rem);
+	row-gap: 1rem;
 }
 
 .home__data {
-    align-self: center;
-
+	align-self: center;
 }
 .home__title {
-    font-size: var(--large-font-size);
-    margin-bottom: var(--mb-5);
-
+	font-size: var(--large-font-size);
+	margin-bottom: var(--mb-5);
 }
 
 .home__title-color {
-    color: var(--primary-color);
+	color: var(--primary-color);
 }
 
 .home__social {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .home__social-icon {
-    width: max-content;
-    margin-bottom: var(--mb-2);
-    font-size: 1.5rem;
-    color: var(--secondary-color);
+	width: max-content;
+	margin-bottom: var(--mb-2);
+	font-size: 1.5rem;
+	color: var(--secondary-color);
 }
 
 .home__social-icon:hover {
-    color: var(--primary-color);
-    
+	color: var(--primary-color);
 }
 
 .home__img {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 350px;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	width: 350px;
 }
 
 .button {
-    display: inline-block;
-    background-color: var(--primary-color);
-    color: #fff;
-    padding: .75rem 2.5rem;
-    font-weight: var(--font-weight);
-    border-radius: .5rem;
+	display: inline-block;
+	background-color: var(--primary-color);
+	color: #fff;
+	padding: 0.75rem 2.5rem;
+	font-weight: var(--font-weight);
+	border-radius: 0.5rem;
 }
 
 .button:hover {
-    box-shadow: 0 10px 36px rgba(0,0,0,.15);
+	box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
 }
 
 .about__container {
-    row-gap: 2rem;
-    text-align: center;
+	row-gap: 2rem;
+	text-align: center;
 }
 
 .about__subtitle {
-    margin-bottom: var(--mb-2);
+	margin-bottom: var(--mb-2);
 }
 
 .about__img {
-    justify-self: center;
+	justify-self: center;
 }
 
 .about__img img {
-    width: 300px;
+	width: 300px;
 }
 
 .skills__container {
-    row-gap: 2rem;
-    text-align: center;
+	row-gap: 2rem;
+	text-align: center;
 }
 
 .skills__subtitle {
-    margin-bottom: var(--mb-2);
+	margin-bottom: var(--mb-2);
 }
 
 .skills__text {
-    margin-bottom: var(--mb-4); 
+	margin-bottom: var(--mb-4);
 }
 
 .skills__data {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    font-weight: var(--font-weight);
-    padding: .5rem 1rem;
-    margin-bottom: var(--mb-2);
-    border-radius: .5rem;
-    box-shadow: 0 4px 25px rgba(14, 36, 49, .15);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: relative;
+	font-weight: var(--font-weight);
+	padding: 0.5rem 1rem;
+	margin-bottom: var(--mb-2);
+	border-radius: 0.5rem;
+	box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
 }
 
 .skills__icon {
-    height: 30px;
-    font-size: 2rem;
-    margin-right: var(--mb-2);
+	height: 30px;
+	font-size: 2rem;
+	margin-right: var(--mb-2);
 }
 
 .skills__names {
-    display: flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 .work {
-    text-align: center;
+	text-align: center;
 }
 
 .work__container {
-    row-gap: 2rem;
-
+	row-gap: 2rem;
 }
 
 .work__img {
-    box-shadow: 0 4px 25px rgba(14, 36, 49, .15);
-    border-radius: .5rem;
-    overflow: hidden;
+	box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
+	border-radius: 0.5rem;
+	overflow: hidden;
 }
 
 .work__img img {
-    transition: 1s;
-    cursor: pointer;
+	transition: 1s;
+	cursor: pointer;
 }
 
 .work__img img:hover {
-    transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 .contact__input {
-    width: 100%;
-    font-size: var(--primary-font-size);
-    font-weight: var(--font-weight);
-    padding: 1rem;
-    border-radius: .5rem;
-    border: 1.5px solid var(--secondary-color);
-    outline: none;
-    margin-bottom: var(--mb-4)
+	width: 100%;
+	font-size: var(--primary-font-size);
+	font-weight: var(--font-weight);
+	padding: 1rem;
+	border-radius: 0.5rem;
+	border: 1.5px solid var(--secondary-color);
+	outline: none;
+	margin-bottom: var(--mb-4);
 }
 
 .contact__button {
-    display: block;
-    border: none;
-    outline: none;
-    font-size: var(--primary-font-size);
-    cursor: pointer;
-    margin-left: auto;
+	display: block;
+	border: none;
+	outline: none;
+	font-size: var(--primary-font-size);
+	cursor: pointer;
+	margin-left: auto;
 }
 
 .footer {
-    background-color: var(--secondary-color);
-    color: #fff;
-    text-align: center;
-    font-weight: var(--font-weight);
-    padding: 2rem 0;
+	background-color: var(--secondary-color);
+	color: #fff;
+	text-align: center;
+	font-weight: var(--font-weight);
+	padding: 2rem 0;
 }
 
 .footer__title {
-    font-size: 2rem;
-    margin-bottom: var(--mb-4);
+	font-size: 2rem;
+	margin-bottom: var(--mb-4);
 }
 
 .footer__social {
-    margin-bottom: var(--mb-4);
+	margin-bottom: var(--mb-4);
 }
 
 .footer__icon {
-    font-size: 1.5rem;
-    color: #fff;
-    margin: 0 var(--mb-2);
+	font-size: 1.5rem;
+	color: #fff;
+	margin: 0 var(--mb-2);
 }
 
 @media screen and (min-width: 768px) {
-    body {
-        margin: 0;
-    }
+	body {
+		margin: 0;
+	}
 
-    .section {
-        padding-top: 4rem;
-        padding-bottom: 3rem;
-    }
+	.section {
+		padding-top: 4rem;
+		padding-bottom: 3rem;
+	}
 
-    .section-title {
-        margin-bottom: var(--mb-6);
-    }
+	.section-title {
+		margin-bottom: var(--mb-6);
+	}
 
-    .section-title::after {
-        width: 80px;
-        top: 3rem;
-    }
+	.section-title::after {
+		width: 80px;
+		top: 3rem;
+	}
 
-    .nav {
-        height: calc(var(--header-height) + 1rem);
-    }
+	.nav {
+		height: calc(var(--header-height) + 1rem);
+	}
 
-    .nav__list {
-        display: flex;
-        padding-top: 0;
+	.nav__list {
+		display: flex;
+		padding-top: 0;
+	}
+
+	.nav__item {
+		margin-left: var(--mb-6);
+		margin-bottom: 0;
+	}
+
+	.nav__toggle {
+		display: none;
+	}
+
+	.nav__link {
+		color: var(--secondary-color);
+	}
+
+	.home {
+		height: 100vh;
+	}
+
+	.home__data {
+		align-self: flex-end;
+	}
+
+	.home__social {
+		padding-top: 0;
+		padding-bottom: 2.5rem;
+		flex-direction: row;
+		align-self: flex-end;
+	}
+
+	.home__social-icon {
+		margin-bottom: 0;
+		margin-right: var(--mb-4);
+	}
+
+	.home__img {
+		width: 457px;
+		bottom: 15%;
+	}
+
+	.about__container, .skills__container {
+		grid-template-columns: repeat(2, 1fr);
+		align-items: center;
+		text-align: initial;
     }
     
-    .nav__item {
-        margin-left: var(--mb-6);
-        margin-bottom: 0;
+    .about__img img {
+        width: 400px;
     }
 
-    .nav__toggle {
-        display: none;
+    .work__container {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        column-gap: 2rem;
     }
 
-    .nav__link {
-        color: var(--secondary-color);
+    .contact__form {
+        
     }
 
-    .home {
-        height: 100vh;
-    }
-
-    .home__data {
-        align-self: flex-end;
-    }
-
-    .home__social {
-        padding-top: 0;
-        padding-bottom: 2.5rem;
-        flex-direction: row;
-        align-self: flex-end;
-    }
-
-    .home__social-icon {
-        margin-bottom: 0;
-        margin-right: var(--mb-4);
-    }
-    
-    .home__img {
-        width: 457px;
-        bottom: 15%;
-    }
-    
 }
