--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,8 @@ img {
 .work__img {
 	box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
 	border-radius: 0.5rem;
-	overflow: hidden;
+    overflow: hidden;
+    position: relative;
 }
 
 .work__img img {
@@ -321,7 +322,37 @@ img {
 }
 
 .work__img img:hover {
-	transform: scale(1.1);
+    transform: scale(1.1);
+    
+}
+
+.work__img:hover .work__link {
+    bottom: 0;
+}
+
+.work__link {
+    position: absolute;
+    bottom: -100%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(var(--primary-color) .3);
+    cursor: pointer;
+    backdrop-filter: blur(10px);
+    transition: .3s;
+}
+
+.work__link-name {
+    color: var(--primary-color);
+    font-weight: var(--font-weight);
+}
+
+.work__link-title {
+    color: var(--primary-color);
+    text-decoration: underline;
+    text-transform: uppercase;
 }
 
 .contact__input {
