--- a/css/style.css
+++ b/css/style.css
@@ -271,34 +271,27 @@ img {
 }
 
 .skills__subtitle {
-	margin-bottom: var(--mb-2);
+	margin-bottom: var(--mb-3);
+	color: var(--primary-color);
 }
 
-.skills__text {
-	margin-bottom: var(--mb-4);
-}
-
-.skills__data {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	position: relative;
-	font-weight: var(--font-weight);
-	padding: 0.5rem 1rem;
-	margin-bottom: var(--mb-2);
-	border-radius: 0.5rem;
-	box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
-}
-
-.skills__icon {
-	height: 30px;
-	font-size: 2rem;
+.skills__name {
+	display: inline-block;
+	font-size: var(--primary-font-size);
 	margin-right: var(--mb-2);
+	margin-bottom: var(--mb-3);
+	padding: 0.25rem 0.5rem;
+	background-color: #fff;
+	border-radius: 0.25rem;
 }
 
-.skills__names {
-	display: flex;
-	align-items: center;
+.skills__name:hover {
+	background-color: var(--primary-color);
+	color: #fff;
+}
+
+.skills__img img {
+	border-radius: 0.5rem;
 }
 
 .work {
@@ -312,8 +305,8 @@ img {
 .work__img {
 	box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
 	border-radius: 0.5rem;
-    overflow: hidden;
-    position: relative;
+	overflow: hidden;
+	position: relative;
 }
 
 .work__img img {
@@ -322,37 +315,36 @@ img {
 }
 
 .work__img img:hover {
-    transform: scale(1.1);
-    
+	transform: scale(1.1);
 }
 
 .work__img:hover .work__link {
-    bottom: 0;
+	bottom: 0;
 }
 
 .work__link {
-    position: absolute;
-    bottom: -100%;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(var(--primary-color) .3);
-    cursor: pointer;
-    backdrop-filter: blur(10px);
-    transition: .3s;
+	position: absolute;
+	bottom: -100%;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgba(var(--primary-color) 0.3);
+	cursor: pointer;
+	backdrop-filter: blur(10px);
+	transition: 0.3s;
 }
 
 .work__link-name {
-    color: var(--primary-color);
-    font-weight: var(--font-weight);
+	color: var(--primary-color);
+	font-weight: var(--font-weight);
 }
 
 .work__link-title {
-    color: var(--primary-color);
-    text-decoration: underline;
-    text-transform: uppercase;
+	color: var(--primary-color);
+	text-decoration: underline;
+	text-transform: uppercase;
 }
 
 .contact__input {
@@ -376,11 +368,12 @@ img {
 }
 
 .footer {
-	background-color: var(--secondary-color);
+    background-color: var(--secondary-color);
+    row-gap: 2rem;
 	color: #fff;
 	text-align: center;
 	font-weight: var(--font-weight);
-	padding: 2rem 0;
+    padding: 2rem 0;
 }
 
 .footer__title {
@@ -396,6 +389,10 @@ img {
 	font-size: 1.5rem;
 	color: #fff;
 	margin: 0 var(--mb-2);
+}
+
+.footer__icon:hover {
+	color: var(--primary-color);
 }
 
 @media screen and (min-width: 768px) {
@@ -482,13 +479,13 @@ img {
 	}
 
 	.contact__form {
-        width: 360px;
-        margin-bottom: var(--mb-6);
+		width: 360px;
+		margin-bottom: var(--mb-6);
 	}
 
 	.contact__container {
-        justify-items: center;
-        align-items: center;
+		justify-items: center;
+		align-items: center;
 	}
 }
 
