update project section v1

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
 	--font-weight: 500;
 
 	/* COLORS */
-	--primary-color: #1dd1a1;
+    --primary-color: #1dd1a1;
+    --primary-hover-color: #149c77;
 	--secondary-color: #130f40;
 	/* FONT & SIZES */
 	--body-font: 'Poppins', sans-serif;
@@ -248,6 +249,20 @@ img {
 	box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
 }
 
+.button-link  {
+    background: none;
+    color: var(--primary-color);
+    padding: 0;
+    display: block;
+    margin: var(--mb-2) 0;
+}
+
+.button-link:hover {
+    background: none;
+    box-shadow: none;
+    color: var(--primary-hover-color);
+}
+
 .about__container {
 	row-gap: 2rem;
 	text-align: center;
@@ -308,7 +323,9 @@ img {
 	background-color: #fff;
 	border-radius: 0.5rem;
 	overflow: hidden;
-	box-shadow: 0 4px 6px rgba(174, 190, 205, 0.3);
+    box-shadow: 0 4px 6px rgba(174, 190, 205, 0.3);
+    position: relative;
+    height: 650px;
 }
 
 .project__img {
@@ -316,8 +333,17 @@ img {
 	transition: 0.4s;
 }
 
+.project__content:hover {
+	box-shadow: 0 6px 8px rgba(174, 190, 205, 0.4);
+}
+
+.project__content:hover .project__img {
+    transform: scale(1.02);
+}
+
 .project__data {
-	padding: 1.5rem;
+    padding: 1.5rem;
+
 }
 
 .project__title {
@@ -326,13 +352,24 @@ img {
 	margin: var(--mb-2) 0;
 }
 
+.project__title:hover {
+    color: var(--primary-hover-color)
+}
 .project__subtitle {
 	font-size: var(--primary-font-size);
 	color: var(--secondary-color);
 }
 
-.project__content:hover {
-	box-shadow: 0 6px 8px rgba(174, 190, 205, 0.4);
+.project__language {
+    display: flex;
+    flex-direction: row;
+    padding: 1.5rem;
+    position: absolute;
+    bottom: 0;
+}
+
+.project__language img {
+    width: 30px;
 }
 
 /* .project {
@@ -519,7 +556,11 @@ img {
 		grid-template-columns: repeat(3, 1fr);
 		/* grid-template-rows: repeat(2, 1fr); */
 		column-gap: 2rem;
-	}
+    }
+    
+    .project-content {
+        height: 1024px;
+    }
 
 	.contact__form {
 		width: 360px;
@@ -541,5 +582,9 @@ img {
 
 	.home__img {
 		right: 10%;
-	}
+    }
+    
+       .project-content {
+        height: 1024px;
+    }
 }
