add illustration section

--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,12 @@ img {
 	color: var(--secondary-color);
 }
 
+/* ILLUSTRATIONS */
+
+.illustration__container {
+    row-gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
 
 /* CONTACT */
 
@@ -496,7 +502,12 @@ img {
 		grid-template-columns: repeat(3, 1fr);
 		/* grid-template-rows: repeat(2, 1fr); */
 		column-gap: 2rem;
-	}
+    }
+    
+    .illustration__container {
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 2rem;
+    }
 
 	.contact__form {
 		width: 360px;
