--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,13 @@ p {
   height: 4rem;
   margin: 1.5rem;
 }
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 768px) {
+
+  h1 {
+    font-size: 3.5rem;
+    text-align: center;
+  }
+
+}
